fix redirect links

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         const userLang = navigator.language || navigator.userLanguage;
 
         if (userLang.startsWith("fr")) {
-            window.location.href = "https://ebesko.github.io/Tttest.github.io/fr/index.html";
+            window.location.href = "https://bipa-studium.github.io/bipag-cifah.github.io/fr/index.html";
         } else if (userLang.startsWith("de")) {
-            window.location.href = "https://ebesko.github.io/Tttest.github.io/de/index.html";
+            window.location.href = "https://bipa-studium.github.io/bipag-cifah.github.io/de/index.html";
         } else {
             //Stay on the page for the user to choose
         }
@@ -19,8 +19,8 @@
 <body>
     <h1>Welcome! Please choose a language:</h1>
     <ul>
-        <li><a href="https://ebesko.github.io/Tttest.github.io/fr/index.html">Français</a></li>
-        <li><a href="https://ebesko.github.io/Tttest.github.io/de/index.html">Deutsch</a></li>
+        <li><a href="https://bipa-studium.github.io/bipag-cifah.github.io/fr/index.html">Français</a></li>
+        <li><a href="https://bipa-studium.github.io/bipag-cifah.github.io/de/index.html">Deutsch</a></li>
     </ul>
 </body>
 </html>
